@@ -1,3 +1,7 @@
+2004-03-12  Dom Lachowicz <cinamod@hotmail.com>
+
+	* rsvg-shapes.c: Allow for base64 embedded image data
+	
 2004-03-11  Dom Lachowicz <cinamod@hotmail.com>
 
 	* rsvg.c: Ability to scale SVGs that don't provide a width or height
